[project]
name = "dbs401-machielearning"
version = "0.1.0"
description = "AI-powered penetration testing tool for database systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "deepagents==0.0.9",
    "langchain[google-genai]>=1.0.0a9",
    "mssql-python>=0.12.0",
    "pydantic-settings>=2.11.0",
    "pymssql>=2.3.7",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
    "python-tds",
    "rich>=14.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.uv.sources]
python-tds = { git = "https://github.com/denisenkom/pytds.git" }

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

